# AgentOptimisedMonorepo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: deploy.yml
1c/420c054d63/: metadata.json
1c/420c054d63/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
a6/b41f71083f/: metadata.json
a6/b41f71083f/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
apps/api/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  memory.py
apps/api/app/core/: config.py
apps/api/app/schemas/: __init__.py  memory.py
apps/api/app/services/: memory.py
apps/web/: AGENTS.md  package.json
skills/: SKILLS_REGISTRY.md
skills/dependency-add/: README.md  manifest.json  run.sh
skills/deploy/: run.sh
skills/docker/: README.md
