[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for the AI-Native Monorepo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "chromadb>=0.6.0",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.4",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
